<resources>
    <string name="app_name">Hometown Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">submit</string>
    <string name="nickname">Nickname :</string>
    <string name="password">Password :</string>
    <string name="country">Country :</string>
    <string name="state">State :</string>
    <string name="city">City :</string>
    <string name="year">Year :</string>
    <string name="latlong">Latitude/Longitude :</string>
    <string name="set">Set</string>
    <string name="filter">Filter</string>
    <string name="google_api">AIzaSyBT-TZgassP2tx_5OJZS3KSKnjwE3A8Xlg</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>

</resources>
