<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:orientation="horizontal" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:weightSum="1.0"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radio_group">
            <RadioButton android:id="@+id/radio_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="List"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Map"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:text="@string/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/countryTextView" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/countryViewSpinner" />

        <TextView
            android:text="@string/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stateTextView" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:id="@+id/stateViewSpinner" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:text="@string/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yearTextView" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_toEndOf="@id/yearTextView"
                android:id="@+id/yearViewEditText"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/yearTextView" />

            <Button
            android:text="@string/filter"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="filter"
            android:id="@+id/filterView"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:padding="22dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/UsersViewLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" >

    </FrameLayout>
</LinearLayout>